--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ input[type="radio"].visually-hidden {
   display: block;
 }
 
-.main-header__navigation-header-item--catalog > ul:hover .main-header__navigation-popup-list-wrapper{
+.main-header__navigation-popup-list-wrapper:hover.main-header__navigation-popup-list-wrapper{
   display: block;
 }
 
@@ -1533,6 +1533,18 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
+.contact__map-link-wrapper {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 560px;
+  height: 222px;
+
+  line-height: 0;
+
+  background-color: #e9e9e9;
+}
+
 .contacts__map {
   display: block;
   margin: 0;
@@ -1840,12 +1852,340 @@ input[type="radio"].visually-hidden {
 }
 
 
+/* modal forms */
 
-/* временно скроем попапы */
-.feedback,
-.map {
-  display: none;
+@keyframes bounce {
+  0%   {transform: translateY(-2000px); }
+  70%  {transform: translateY(30px); }
+  90%  {transform: translateY(10px); }
+  100% {transform: translateY(0); }
 }
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+.feedback {
+  display: flex;
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0;
+
+  /* height: 600px;  временно */
+
+  position: relative;
+}
+
+.feedback-form {
+  display: none;
+
+  width: 760px;
+  margin: 0 auto;
+  padding: 100px;
+
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  position: fixed;
+
+  top: 200px;
+
+  left: 50%;
+  transform: translateX(-50%);
+
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
+
+  z-index: 1;
+}
+
+.feedback-form-show {
+  display: flex;
+
+  animation: bounce 0.6s;
+}
+
+.feedback-form-error {
+  animation: shake 0.6s;
+}
+
+.feedback-form__name-mail-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 40px;
+  width: 760px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.feedback-form__name-mail-wrapper p {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.feedback-form__label {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 15px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-weight: 700;
+  color: #000000;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+}
+
+.feedback-form__input {
+  display: block;
+  box-sizing: border-box;
+  width: 320px;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  background-color: #f2f2f2;
+  border: 3px solid #f2f2f2;
+}
+
+.feedback-form__input::placeholder {
+  font-family: "OpenSans", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: rgba(70, 70, 70, 0.4);
+}
+
+.feedback-form__input:hover {
+  background-color: #eaeaea;
+  border: 3px solid #eaeaea;
+}
+
+.feedback-form__input:focus {
+  color: #464646;
+  background-color: #ffffff;
+  border: 3px solid #f0c52e;
+}
+
+.feedback-form__input--error {
+  background-color: #f6dada;
+  border: 3px solid #f6dada;
+}
+
+.feedback-form__input-text-wrapper {
+  margin: 0;
+  padding: 0;
+  padding-bottom: 50px;
+}
+
+.feedback-form__input-text {
+  margin: 0;
+  padding: 20px;
+  width: 720px;
+
+  font-family: "OpenSans", Arial, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: rgba(70, 70, 70, 0.4);
+
+  background-color: #f2f2f2;
+  border: 3px solid #f2f2f2;
+
+  resize: none;
+  outline: none;
+}
+
+.feedback-form__input-text:hover {
+  background-color: #eaeaea;
+  border: 3px solid #eaeaea;
+}
+
+.feedback-form__input-text:focus {
+  color: #464646;
+  background-color: #ffffff;
+  border: 3px solid #f0c52e;
+}
+
+.feedback-form__submit {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  width: 200px;
+  height: 40px;
+
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-weight: 700;
+  color: #000000;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3.6px;
+  text-decoration: none;
+
+  background-color: #ffffff;
+  border: none;
+
+  position: relative;
+  z-index: 1;
+}
+
+.feedback-form__submit::after {
+  content: "";
+
+  width: 200px;
+  height: 8px;
+  background-color: #f0c52e;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+
+  position: absolute;
+  top: 16px;
+  left: 0;
+
+  z-index: -1;
+}
+
+.feedback-form__submit:hover::after {
+  transition: transform 0.25s ease;
+  transform: scaleY(5);
+}
+
+.feedback-form__submit:active {
+  width: 200px;
+  height: 40px;
+  background-color: #f0c52e;
+  background-repeat: no-repeat;
+  color: rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 1;
+}
+
+.feedback-form__close {
+  position: absolute;
+
+  top: 20px;
+  right: 25px;
+
+  width: 55px;
+  height: 55px;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 0;
+  outline: none;
+
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.feedback-form__close:hover {
+  opacity: 1.0;
+}
+
+.feedback-form__close:active {
+  opacity: 0.3;
+}
+
+
+.map {
+  display: block;
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0;
+
+  /* height: 560px;  временно */
+
+  position: relative;
+}
+
+.map-form {
+  display: none;
+
+  width: 960px;
+  margin: 0 auto;
+  padding: 0;
+
+  line-height: 0;
+
+  position: fixed;
+  z-index: 1;
+
+  top: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  background-color: #e9e9e9;
+
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+.map-form-show {
+  display: block;
+  animation: bounce 0.6s;
+}
+
+.map-form__close {
+  position: absolute;
+
+  top: 20px;
+  right: 25px;
+
+  width: 55px;
+  height: 55px;
+
+  font-size: 0;
+
+  background-color: transparent;
+  border: 0;
+  outline: none;
+
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.map-form__close:hover {
+  opacity: 1.0;
+}
+
+.map-form__close:active {
+  opacity: 0.3;
+}
+
+
 
 
 /* inner page */
