--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ input[type="radio"].visually-hidden {
   position: relative;
 }
 
-/* здесь будет форма поиска по сайту */
+/* форма поиска по сайту */
 
 .main-header__search-input {
   font-family: "OpenSans", Arial, sans-serif;
@@ -269,7 +269,7 @@ input[type="radio"].visually-hidden {
   height: 12px;
 
   position: absolute;
-  top: 10px;
+  top: 9px;
   left: 0px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='12' viewBox='0 0 13 12'%3E%3Cpath fill='%23272525' d='M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z'/%3E%3C/svg%3E%0A");
@@ -292,6 +292,9 @@ input[type="radio"].visually-hidden {
   opacity: 0.3;
 }
 
+.main-header__navigation-item--user-quit {
+  color: rgba(0, 0, 0, 0.3);
+}
 
 .main-header__navigation-item--cart {
   padding-left: 24px;
@@ -304,7 +307,7 @@ input[type="radio"].visually-hidden {
   height: 12px;
 
   position: absolute;
-  top: 10px;
+  top: 9px;
   left: 2px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath d='M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z'/%3E%3Cpath d='M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z'/%3E%3C/svg%3E%0A");
@@ -340,7 +343,7 @@ input[type="radio"].visually-hidden {
   height: 10px;
 
   position: absolute;
-  top: 12px;
+  top: 10px;
   left: 0px;
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath d='M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z'/%3E%3C/svg%3E%0A");
@@ -362,7 +365,6 @@ input[type="radio"].visually-hidden {
 .main-header__navigation-item--compare:active::before {
   opacity: 0.3;
 }
-
 
 
 .main-header__site-navigation-list {
@@ -535,7 +537,7 @@ input[type="radio"].visually-hidden {
   width: 1440px;
   margin: 0 auto;
   padding: 0;
-
+  padding-bottom: 35px;
 
   position: relative;
 }
@@ -642,7 +644,6 @@ input[type="radio"].visually-hidden {
   display: flex;
   margin: 0;
   padding: 0;
-  padding-bottom: 50px;
 
   width: 220px;
   height: 40px;
@@ -692,6 +693,10 @@ input[type="radio"].visually-hidden {
   color: rgba(0, 0, 0, 0.3);
   position: relative;
   z-index: 1;
+}
+
+.main-slider__item-table {
+  padding-top: 50px;
 }
 
 .main-slider__item-table-value td {
@@ -788,8 +793,6 @@ input[type="radio"].visually-hidden {
   border-radius: 50%;
   border: 1px solid #000000;
 }
-
-/* --- */
 
 
 /* popular products*/
@@ -917,16 +920,6 @@ input[type="radio"].visually-hidden {
   position: relative;
 }
 
-/*
-.services__slider-control {
-  margin: 0;
-  padding: 0;
-  padding-left: 140px;
-  padding-top: 80px;
-  padding-bottom: 145px;
-  width: 420px;
-}
-*/
 
 /* services controls */
 
@@ -945,6 +938,14 @@ input[type="radio"].visually-hidden {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+
+  position: relative;
+}
+
+.service-slider-control-line {
+  position: absolute;
+  top: 0;
+  left: 415px;
 }
 
 .services__slider-control-item-wrapper--delivery,
@@ -1608,22 +1609,17 @@ input[type="radio"].visually-hidden {
 }
 
 
-
-
 /* footer */
-
 
 .main-footer {
   width: 1440px;
-
-  height: 179px; /* временно */
 
   margin: 0 auto;
   padding: 0;
   padding-top: 65px;
   padding-bottom: 79px;
 
-  background-color: #464646; /* заменить цвет 464646  */
+  background-color: #464646;
 }
 
 .main-footer__wrapper {
@@ -1654,6 +1650,10 @@ input[type="radio"].visually-hidden {
   padding: 0;
 }
 
+.main-footer__navigation-link-wrapper-inner-page {
+  width: 500px;
+}
+
 .main-footer__user-links,
 .main-footer__goods-action {
   display: flex;
@@ -1662,6 +1662,10 @@ input[type="radio"].visually-hidden {
   padding: 0;
 
   list-style: none;
+}
+
+.main-footer__user-links-inner-page {
+  padding-right: 55px;
 }
 
 .main-footer__navigation-item {
@@ -1680,21 +1684,130 @@ input[type="radio"].visually-hidden {
   color: rgba(255, 255, 255, 0.7);
 }
 
-/* добавить иконки и состояния */
 
-.main-footer-navigation-item__cart {
+.main-footer__navigation-item--cart {
   padding-left: 24px;
 }
 
-.main-footer-navigation-item__compare {
+.main-footer__navigation-item--compare {
   padding-left: 20px;
   padding-right: 41px;
 }
 
-.main-footer-navigation-item__user {
-  padding-left: 22px;
+
+/* иконки и состояния */
+
+.main-footer__navigation-item--user {
+  padding-left: 26px;
   padding-right: 44px;
+  position: relative;
 }
+
+.main-footer__navigation-item--user::before {
+  content: "";
+
+  width: 13px;
+  height: 12px;
+
+  position: absolute;
+  top: 11px;
+  left: 0px;
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='13' height='12' viewBox='0 0 13 12'%3E%3Cpath fill='%23ffc600' d='M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+}
+
+.main-footer__navigation-item--user:hover {
+  color: #ffffff;
+}
+
+.main-footer__navigation-item--user:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.main-footer__navigation-item--user:hover::before {
+  opacity: 0.6;
+}
+
+.main-footer__navigation-item--user:active::before {
+  opacity: 0.3;
+}
+
+.main-footer__navigation-item--user-quit {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.main-footer__navigation-item--compare {
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+}
+
+.main-footer__navigation-item--compare::before {
+  content: "";
+
+  width: 10px;
+  height: 10px;
+
+  position: absolute;
+  top: 12px;
+  left: 0px;
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cpath fill='%23ffc600' d='M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+}
+
+.main-footer__navigation-item--compare:hover {
+  color: #ffffff;
+}
+
+.main-footer__navigation-item--compare:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.main-footer__navigation-item--compare::before {
+  opacity: 0.6;
+}
+
+.main-footer__navigation-item--compare:active::before {
+  opacity: 0.3;
+}
+
+.main-footer__navigation-item--cart {
+  padding-left: 24px;
+  position: relative;
+}
+
+.main-footer__navigation-item--cart::before {
+  content: "";
+
+  width: 12px;
+  height: 12px;
+
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23ffc600' d='M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z'/%3E%3Cpath d='M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+}
+
+.main-footer__navigation-item--cart:hover {
+  color: #ffffff;
+}
+
+.main-footer__navigation-item--cart:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.main-footer__navigation-item--cart:hover::before {
+  opacity: 0.6;
+}
+
+.main-footer__navigation-item--cart:active::before {
+  opacity: 0.3;
+}
+
 
 .main-footer__logo-device,
 .main-footer__logo-htmlacademy {
@@ -1758,8 +1871,6 @@ input[type="radio"].visually-hidden {
   transform: translate(-50%, -50%);
 }
 
-/* добавить события */
-
 .main-footer__services-item {
   display: block;
   margin: 0;
@@ -1775,6 +1886,17 @@ input[type="radio"].visually-hidden {
   letter-spacing: 3.6px;
   text-decoration: none;
 }
+
+/* события */
+
+.main-footer__services-item:hover {
+  opacity: 0.6;
+}
+
+.main-footer__services-item:active {
+  opacity: 0.3;
+}
+
 
 .main-footer__footer-wrapper {
   display: flex;
@@ -1823,7 +1945,6 @@ input[type="radio"].visually-hidden {
   line-height: 0;
 }
 
-/* добавить события */
 
 .main-footer__social-button {
   display: block;
@@ -1834,6 +1955,16 @@ input[type="radio"].visually-hidden {
 
   line-height: 0;
 
+  opacity: 0.3;
+}
+
+/* события */
+
+.main-footer__social-button:hover {
+  opacity: 0.6;
+}
+
+.main-footer__social-button:active {
   opacity: 0.3;
 }
 
@@ -1855,16 +1986,19 @@ input[type="radio"].visually-hidden {
 /* modal forms */
 
 @keyframes bounce {
-  0%   {transform: translateY(-2000px); }
-  70%  {transform: translateY(30px); }
-  90%  {transform: translateY(10px); }
-  100% {transform: translateY(0); }
+  0%   {
+    -webkit-transform: translate(-50%, -200%);
+            transform: translate(-50%, -200%); }
+  100% {
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
 }
 
 @keyframes shake {
   0%,
   100% {
-    transform: translateX(0);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
   }
 
   10%,
@@ -1872,14 +2006,16 @@ input[type="radio"].visually-hidden {
   50%,
   70%,
   90% {
-    transform: translateX(-10px);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-51%, -50%);
   }
 
   20%,
   40%,
   60%,
   80% {
-    transform: translateX(10px);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-49%, -50%);
   }
 }
 
@@ -1888,8 +2024,6 @@ input[type="radio"].visually-hidden {
   width: 1440px;
   margin: 0 auto;
   padding: 0;
-
-  /* height: 600px;  временно */
 
   position: relative;
 }
@@ -1907,10 +2041,9 @@ input[type="radio"].visually-hidden {
 
   position: fixed;
 
-  top: 200px;
-
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
 
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
   background-color: #ffffff;
@@ -2057,6 +2190,7 @@ input[type="radio"].visually-hidden {
 
   background-color: #ffffff;
   border: none;
+  outline: none;
 
   position: relative;
   z-index: 1;
@@ -2091,6 +2225,7 @@ input[type="radio"].visually-hidden {
   color: rgba(0, 0, 0, 0.3);
   position: relative;
   z-index: 1;
+  outline: none;
 }
 
 .feedback-form__close {
@@ -2127,8 +2262,6 @@ input[type="radio"].visually-hidden {
   margin: 0 auto;
   padding: 0;
 
-  /* height: 560px;  временно */
-
   position: relative;
 }
 
@@ -2144,13 +2277,28 @@ input[type="radio"].visually-hidden {
   position: fixed;
   z-index: 1;
 
-  top: 200px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
 
   background-color: #e9e9e9;
 
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+.map-form__google-map {
+  box-sizing: border-box;
+  width: 960px;
+  height: 560px;
+  border: none;
+  margin: 0;
+  padding: 0;
+
+  line-height: 0;
+  font-size: 0;
+
+  background-color: #e9e9e9;
+  background-image: url(../img/map-big-jpg.jpg);
 }
 
 .map-form-show {
@@ -2186,8 +2334,6 @@ input[type="radio"].visually-hidden {
 }
 
 
-
-
 /* inner page */
 
 .inner-page-header {
@@ -2210,7 +2356,7 @@ input[type="radio"].visually-hidden {
   padding: 0;
   padding-left: 60px;
 
-  padding-top: 40;
+  padding-top: 40px;
 
   padding-bottom: 30px;
 
@@ -2239,14 +2385,29 @@ input[type="radio"].visually-hidden {
   display: block;
   margin: 0;
   padding: 0;
-  padding-left: 40px;
+  padding-right: 40px;
+
+  position: relative;
 }
 
+.inner-page-header__breadcrumbs-nav::after {
+  content: "";
+
+  width: 4px;
+  height: 7px;
+
+  position: absolute;
+  top: 12px;
+  right: 18px;
+
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='7' viewBox='0 0 4 7'%3E%3Cpath d='M3.83 3.132L.861.144a.5.5 0 0 0-.713 0 .508.508 0 0 0 0 .718l2.611 2.629L.148 6.12a.51.51 0 0 0 0 .72.5.5 0 0 0 .713 0L3.83 3.852a.51.51 0 0 0 .147-.36.507.507 0 0 0-.147-.36z'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+}
+
+
 .inner-page-header__breadcrumbs-link {
-
-
   font-family: "OpenSans", Arial, sans-serif;
-  font-size: 14x;
+  font-size: 14px;
   line-height: 24px;
   font-weight: 400;
   letter-spacing: 0.14px;
@@ -2452,7 +2613,7 @@ input[type="radio"].visually-hidden {
   padding: 0;
 
   font-family: "OpenSans", Arial, sans-serif;
-  font-size: 14x;
+  font-size: 14px;
   line-height: 40px;
   font-weight: 400;
   letter-spacing: 0.14px;
@@ -2584,7 +2745,7 @@ input[type="radio"].visually-hidden {
   padding-left: 40px;
 
   font-family: "OpenSans", Arial, sans-serif;
-  font-size: 14x;
+  font-size: 14px;
   line-height: 40px;
   font-weight: 400;
   letter-spacing: 0.14px;
@@ -2822,7 +2983,7 @@ input[type="radio"].visually-hidden {
 .search-result__sort-type-link {
 
   font-family: "OpenSans", Arial, sans-serif;
-  font-size: 14x;
+  font-size: 14px;
   line-height: 28px;
   font-weight: 400;
   letter-spacing: 0.14px;
@@ -2860,7 +3021,23 @@ input[type="radio"].visually-hidden {
   padding-left: 20px;
 }
 
-/* добавить состояния */
+/* состояния */
+
+.search-result__up-down-item a {
+  opacity: 0.2;
+}
+
+.search-result__up-down-item a:hover {
+  opacity: 0.4;
+}
+
+.search-result__up-down-item a:active {
+  opacity: 1.0;
+}
+
+.search-result__up-down-item--current a {
+  opacity: 1.0;
+}
 
 
 .search-result__goods-list-wrapper {
@@ -2903,7 +3080,7 @@ input[type="radio"].visually-hidden {
 .search-result__goos-cart-text-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: top;
+  align-items: flex-start;
   margin: 0;
   padding: 0;
   padding-top: 30px;
@@ -3024,7 +3201,7 @@ input[type="radio"].visually-hidden {
 
 .search-result__googs-card-button-compare {
   font-family: "OpenSans", Arial, sans-serif;
-  font-size: 13x;
+  font-size: 13px;
   line-height: 36px;
   font-weight: 400;
   letter-spacing: 0.13px;
@@ -3033,10 +3210,18 @@ input[type="radio"].visually-hidden {
   text-decoration: none;
 }
 
+.search-result__googs-card-button-compare:hover {
+  color: #000000;
+}
+
+.search-result__googs-card-button-compare:active {
+  color: rgba(0, 0, 0, 0.2);
+}
+
+
 .search-result__goods-card-img-wrapper:hover .search-result__goods-card-hover {
   display: flex;
 }
-
 
 
 .search-result__page-navigation {
@@ -3061,23 +3246,13 @@ input[type="radio"].visually-hidden {
   width: 90px;
   justify-content: space-between;
   align-items: center;
-}
 
-.search-result__page-navigation-item-back {
-  margin: 0;
-  padding: 0;
-  padding-left: 30px;
+  list-style: none;
 }
 
 .search-result__page-navigation-item {
   margin: 0;
   padding: 0;
-}
-
-.search-result__page-navigation-item-forward {
-  margin: 0;
-  padding: 0;
-  padding-right: 30px;
 }
 
 .search-result__page-navigation-link {
@@ -3089,5 +3264,46 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
   text-decoration: none;
 
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.search-result__page-navigation-link-current {
   color: #000000;
+}
+.search-result__page-navigation-link:active {
+  color: #000000;
+}
+
+.search-result__page-navigation-link:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.search-result__page-navigation-link-back,
+.search-result__page-navigation-link-forward {
+  display: block;
+  margin: 0;
+  padding: 24px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 700;
+  letter-spacing: 3.2px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+}
+
+.search-result__page-navigation-link-back:hover,
+.search-result__page-navigation-link-forward:hover {
+  background-color: #d9d9d9;
+}
+.search-result__page-navigation-link-back:active,
+.search-result__page-navigation-link-forward:active{
+  color: rgba(0, 0, 0, 0.3);
+  background-color: #d9d9d9;
+}
+.search-result__page-navigation-link-back:active,
+.search-result__page-navigation-forward-back:active {
+  color: rgba(0, 0, 0, 0.3);
 }
